! Fixed help popup z-index regarding objects below it. (index.css)
* Added group colors to membergroup list in admin permission page. The data was retrieved, I'm not sure why it wasn't shown in the first place... (ManagePermissions.template.php)

* Moved most of the output buffer reset code to its own function, clean_output(), which takes only one parameter to force (=true) disabling the ob_sessrewrite buffer. Mainly doing this to simplify things for modders. (Feed.php, Like.php, ManageMedia.php, Subs-Template.php, ViewRemote.php)

! Fixed media permission profile page's album list link. It was broken due to incorrect Ajax handling. (ManageMedia.php)

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -1525,6 +1525,7 @@ dl#feed
 // Container for the JavaScript popup version
 #help_pop
 	position: fixed
+	z-index: 1
 	left, top: 0
 	background-color: rgba(0,0,0, .2)
 	a
